<resources>
    <string name="app_name">DesignApp</string>
    <string name="log_in">LOG IN</string>
    <string name="mail_address">Mail Address</string>
    <string name="or">OR</string>
    <string name="register">REGISTER</string>
    <string name="welcome_to_activeout">WELCOME TO ACTIVEOUT</string>
    <string name="address_optional">Address(optional)</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create">CREATE</string>
    <string name="name">Name</string>
    <string name="password_again">Password (Again)</string>
    <string name="password">Password</string>
    <string name="phone_optional">Phone(optional)</string>
    <string name="surname_optional">Surname (optional)</string>
    <string name="attenders">Attenders :</string>
    <string name="add_attender">Add Attender</string>
    <string name="log_out">LOG OUT</string>
    <string name="activities">ACTIVITIES</string>
    <string name="users">USERS</string>
    <string name="use_the_buttons_below_to_see_users_or_activities">Use the buttons below to see users or activities</string>
    <string name="welcome">WELCOME</string>
    <string name="activity_name">Activity Name</string>
    <string name="create_activity">CREATE ACTIVITY</string>
    <string name="update_activity">UPDATE ACTIVITY</string>
    <string name="add_activity">ADD ACTIVITY</string>
    <string name="delete_activity">DELETE ACTIVITY</string>
    <string name="pick_one_activity_to_update_or_delete">Pick one activity to update or delete</string>
    <string name="pick_one_user_to_add_attender">Pick one user to add attender</string>
    <string name="details">Details</string>
    <string name="beginning_date_of_activity">Beginning Date of Activity</string>
    <string name="city_of_activity">City of Activity</string>
    <string name="details_of_activity">Details of Activity</string>
    <string name="terminate_date_of_activity">Terminate Date of Activity</string>
    <string name="birthdate">Birthdate</string>
    <string name="city">City</string>
    <string name="sex">Sex</string>
</resources>
