<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt_profilewelcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.senakutlu.designapp.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:id="@+id/textView"
        android:text="@string/welcome" />

    <TextView
        android:text="@string/use_the_buttons_below_to_see_users_or_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="28dp"
        android:id="@+id/txt_guide" />

    <Button
        android:text="@string/users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/btn_profileusers"
        android:layout_below="@+id/txt_guide"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_profileactivities"
        android:gravity="center"
        android:layout_below="@+id/btn_profileusers"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:id="@+id/btn_logout"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_profileusers"
        android:layout_alignStart="@+id/btn_profileusers" />

</RelativeLayout>
