<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:text="@string/welcome_to_activeout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_welcome"
        android:layout_marginTop="25dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:gravity="center"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/txt_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/mail_address">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_mail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_mail"
        android:layout_alignRight="@+id/txt_password"
        android:layout_marginTop="270dp"
        android:text="@string/log_in"
        tools:ignore="RtlHardcoded"
        android:background="#a46fe4e8"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:text="@string/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_or"
        android:layout_marginTop="330dp"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_mail"
        android:layout_alignRight="@+id/txt_password"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        tools:ignore="RtlHardcoded"
        android:background="#a46fe4e8"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/txt_or"
        android:onClick="onCli" />

</RelativeLayout>