<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_activities"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.senakutlu.designapp.ActivitiesActivity">

    <Button
        android:text="@string/delete_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_deleteactivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="@string/add_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addactivity"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <Button
        android:text="@string/update_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_updateactivity"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:text="@string/pick_one_activity_to_update_or_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_guideactivity"
        android:layout_above="@+id/btn_updateactivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
